[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = { version = "0.3.8", features = ["derive"] }
anyhow = "1.0.86"
async-trait = "0.1.82"
auto_impl = "1.2.0"
console-subscriber = "0.4.0"
dashmap = "6.0.1"
hex = "0.4.3"
hex-literal = "0.4.1"
hyper = "1.4.1"
hyper-util = { version = "0.1.7", features = ["client", "server"] }
jsonrpsee = { version = "0.24.3", features = [
    "http-client",
    "server",
    "macros",
    "tracing",
    "jsonrpsee-core",
    "jsonrpsee-types",
] }
k256 = "0.13.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rocksdb = "0.22.0"
secp256k1 = { version = "0.29.1", features = ["rand", "serde", "hashes"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
    "tracing",
] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
